--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  multicast_dns: ^0.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
